--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -1,182 +1,108 @@
-#Privacy Policy
-Please visit www.b-sure.net for an updated version, if there were any updates, after
-publishing the following.
-The following is the privacy policy related to the B-SURE system, and is applicable to all mobile
+Privacy Policy Please visit www.b-sure.net for an updated version, if there were any updates, after publishing the following.
 
-applications, web, and other channels. If you do not like or agree with this policy, please un-
-install the B-SURE application, and stop using the application through the Web and other channels.
+The following is the privacy policy related to the B-SURE system, and is applicable to all mobile applications, web, and other channels. If you do not like or agree with this policy, please un-install the B-SURE application, and stop using the application through the Web and other channels.
 
-We are committed to maintaining the accuracy, confidentiality, and security of your personally
-identifiable information ("Personal Information"). As part of this commitment, our privacy policy
-governs our actions as they relate to the collection, use and disclosure of Personal Information.
-Our privacy policy is based upon the values set by the Canadian Standards Association's Model
-Code for the Protection of Personal Information and Canada's Personal Information
-Protection and Electronic Documents Act (PIPEDA).
+We are committed to maintaining the accuracy, confidentiality, and security of your personally identifiable information ("Personal Information"). As part of this commitment, our privacy policy governs our actions as they relate to the collection, use and disclosure of Personal Information. Our privacy policy is based upon the values set by the Canadian Standards Association's Model Code for the Protection of Personal Information and Canada's Personal Information Protection and Electronic Documents Act (PIPEDA).
 
-#1. Introduction
+1. Introduction
 
-B-SURE is a system that helps with self-check of infection symptoms for entry screening,
-recording keeping of people (staff, customers, visitors, etc.) visiting any establishment as well as
-contact tracing. This system requires certain information from the users of this system, as
-indicated in section 2 below.
+B-SURE is a system that helps with self-check of infection symptoms for entry screening, recording keeping of people (staff, customers, visitors, etc.) visiting any establishment as well as contact tracing.. This system requires certain information from the users of this system, as indicated in section 2 below.
 
-The establishment could be any private or public sector establishment, any type of business,
-store, office, educational institution, museum, theatre, or any public space where the
-government or public health guidelines apply.
+The establishment could be any private or public sector establishment, any type of business, store, office, educational institution, museum, theatre, or any public space where the government or public health guidelines apply.
 
-This privacy policy applies to all components of the B-SURE application that includes Web,
-Mobile, and IVR components and various user interfaces - the general user interfaces,
-location interfaces, and the public health user interface.
+This privacy policy applies to all components of the B-SURE application that includes Web, Mobile, and IVR components and various user interfaces - the general user interfaces, location interfaces, and the public health user interface.
 
-You may contact us for any questions or concerns regarding the privacy at the email address
-shown in section 11 below.
+You may contact us for any questions or concerns regarding the privacy at the email address shown in section 11 below.
 
-This B-SURE application is a non-profit initiative by the volunteer members of IIT Alumni
-Canada, and is provided free of cost.
+This B-SURE application is a non-profit initiative by the volunteer members of IIT Alumni Canada, and is provided free of cost.
 
-#2. Identifying Purposes
+2. Identifying Purposes
 
-The system is designed to help establishments to perform screening for infection symptoms and
-keeping a record of your visit as required by the local government or public health guidelines.
-This data helps with contact tracing by the public health agencies.
-The system asks you questions about infection symptoms for the purpose of establishing if you
-have any infection symptoms. You can voluntarily record your visit to any establishment that
-uses this B-SURE solution by scanning the QR code. Your visit record will be used for contact
-tracing purposes.
+The system is designed to help establishments to perform screening for infection symptoms and keeping a record of your visit as required by the local government or public health guidelines. This data helps with contact tracing by the public health agencies.
 
-If you are general public user, this system requires your contact information, that is your email
-address and optionally your mobile phone number, in order to contact you, if you had potential
-exposure to an infected person. The system does not need your name or address.
-Any specific answers you provide during the infection symptoms self-check is not stored in the
-system. We store only the final result of the assessment, which is valid only until 11:59 PM the
-same day.
+The system asks you questions about infection symptoms for the purpose of establishing if you have any infection symptoms. You can voluntarily record your visit to any establishment that uses this B-SURE solution by scanning the QR code. Your visit record will be used for contact tracing purposes.
 
-If you are an establishment user, we need your name, contact info and location address, in
-order to contact you for any location-specific purpose.
-If you are a public health official, we need your name, contact info, and location address, in
-order to contact you.
+If you are general public user, this system requires your contact information, that is your email address and optionally your mobile phone number, in order to contact you, if you had potential exposure to an infected person. The system does not need your name or address.
 
-The above information is securely stored in a high-security cloud data centre in Canada, in an
-encrypted form, and you are allocated a unique randomly generated 12-character token,
-represented by a QR code. The application does not know who you are. The visit record data
-contains only this token, and not your actual contact information. Your contact information, your
-token number, or your visit record data are not shared with anyone, including the public health
-agencies or any government. It is up to you to provide your personal QR code to any public
-health agency for contact tracing purposes.
+Any specific answers you provide during the infection symptoms self-check is not stored in the system. We store only the final result of the assessment, which is valid only until 11:59 PM the same day.
 
-The application does not track your location, does not use GPS or Bluetooth, does not transfer
-any information from the phone to anyone, and does not access your contacts.
+If you are an establishment user, we need your name, contact info and location address, in order to contact you for any location-specific purpose.
 
-The application does not store anything in the phone or computer’s storage. Any data in the
-memory will be lost as soon as you log out of the application.
+If you are a public health official, we need your name, contact info, and location address, in order to contact you.
+
+The above information is securely stored in a high-security cloud data centre in Canada, in an encrypted form, and you are allocated a unique randomly generated 12-character token, represented by a QR code. The application does not know who you are. The visit record data contains only this token, and not your actual contact information. Your contact information, your token number, or your visit record data are not shared with anyone, including the public health agencies or any government. It is up to you to provide your personal QR code to any public health agency for contact tracing purposes.
+
+The application does not track your location, does not use GPS or Bluetooth, does not transfer any information from the phone to anyone, and does not access your contacts.
+
+The application does not store anything in the phone or computer’s storage. Any data in the memory will be lost as soon as you log out of the application.
 
 The application does not access or store your IP address.
 
-If you are a general public user, based on the potential exposure notification you receive from
-the system via e-mail or a text message, you can take necessary steps for consulting your
-healthcare provider, getting tested for the infection, undergo treatment and to isolate yourself to
-avoid further spreading the virus, in case you got infected.
+If you are a general public user, based on the potential exposure notification you receive from the system via e-mail or a text message, you can take necessary steps for consulting your healthcare provider, getting tested for the infection, undergo treatment and to isolate yourself to avoid further spreading the virus, in case you got infected.
 
-If you are an establishment contact, we will inform you if there were any people who visited your
-location and later tested positive for the infection, so that you can take any necessary steps to
-protect your staff and visitors to your location.
+If you are an establishment contact, we will inform you if there were any people who visited your location and later tested positive for the infection, so that you can take any necessary steps to protect your staff and visitors to your location.
 
-If you are a public health official, you can only initiate automated contact tracing if any of the
-users of this system test positive for the infection, without having access to any of the personal
-data in the system.
+If you are a public health official, you can only initiate automated contact tracing if any of the users of this system test positive for the infection, without having access to any of the personal data in the system.
 
 All names and contact information are securely stored in an encrypted database.
 
-All tracing data is archived after 28 days. The archived data does not contain any personally
-identifiable information, and may be allowed to be used by public health researchers in the
-future.
+All tracing data is archived after 28 days. The archived data does not contain any personally identifiable information, and may be allowed to be used by public health researchers in the future.
 
-#3. Consent
+3. Consent
 
-By providing your contact information, you are providing your consent to use the system and
-receive notifications.
+By providing your contact information, you are providing your consent to use the system and receive notifications.
 
-By scanning the QR code at any location, you are providing your consent to record your visit to
-that location in our database.
+By scanning the QR code at any location, you are providing your consent to record your visit to that location in our database.
 
-By scanning your QR code at any public health agency, you are providing your consent to
-initiate contact tracing by the public health officials.
+By scanning your QR code at any public health agency, you are providing your consent to initiate contact tracing by the public health officials.
 
-By using this system, you are providing your consent to provide relevant data to your employer
-or any agency responsible for safeguarding your health.
+By using this system, you are providing your consent to provide relevant data to your employer or any agency responsible for safeguarding your health.
 
-Knowledge and consent are required for the collection, use, or disclosure of Personal
-Information except where required or permitted by law. Providing us with your Personal
-Information is always your choice. However, your decision not to provide certain information
-may limit our ability to provide you with our products or services. We will not require you to
-consent to the collection, use, or disclosure of information as a condition to the supply of a
-product or service, except as required to be able to supply the product or service.
+Knowledge and consent are required for the collection, use, or disclosure of Personal Information except where required or permitted by law. Providing us with your Personal Information is always your choice. However, your decision not to provide certain information may limit our ability to provide you with our products or services. We will not require you to consent to the collection, use, or disclosure of information as a condition to the supply of a product or service, except as required to be able to supply the product or service.
 
-#4. Limiting Collection
+4. Limiting Collection
 
 The Personal Information collected will be limited to those specific purposes identified by us.
 
-#5. Limiting Use, Disclosure, and Retention
+5. Limiting Use, Disclosure, and Retention
 
-Limiting Use: Personal Information will only be used or disclosed for the purpose of which it was
-collected unless you have otherwise consented, or when it is required or permitted by law.
+Limiting Use: Personal Information will only be used or disclosed for the purpose of which it was collected unless you have otherwise consented, or when it is required or permitted by law.
 
-Disclosure: We do not disclose your personal information to anyone, including the public health
-authorities.
+Disclosure: We do not disclose your personal information to anyone, including the public health authorities.
 
-Retention: Personal Information will only be retained for the period of time required to fulfill the
-purpose for which we collected it or as may be required by law.
+Retention: Personal Information will only be retained for the period of time required to fulfill the purpose for which we collected it or as may be required by law.
 
-#6. Accuracy
+6. Accuracy
 
-Personal Information will be maintained in as accurate, complete, and up-to-date form as is
-necessary to fulfill the purposes for which it is to be used in this context for health assessment
-and contact tracing.
+Personal Information will be maintained in as accurate, complete, and up-to-date form as is necessary to fulfill the purposes for which it is to be used in this context for health assessment and contact tracing.
 
-#7. Safeguarding Customer/user Information
+7. Safeguarding Customer/user Information
 
-Personal Information will be protected by security safeguards that are appropriate to the
-sensitivity level of the information. We take all reasonable precautions to protect your Personal
-Information from any loss or unauthorized use, access, or disclosure.
+Personal Information will be protected by security safeguards that are appropriate to the sensitivity level of the information. We take all reasonable precautions to protect your Personal Information from any loss or unauthorized use, access, or disclosure.
 
-#8. Openness
+8. Openness
 
-We will make information available to you about our policies and practices with respect to the
-management of your Personal Information. These policies include security and archival
-processes, and disclosure in case of any compromise.
+We will make information available to you about our policies and practices with respect to the management of your Personal Information. These policies include security and archival processes, and disclosure in case of any compromise.
 
-#9. Customer Access
+9. Customer Access
 
-You will always have access to your personal information, the phone number and the email
-address. You may verify the accuracy and completeness of your contact information and may
-amend the information yourself, if appropriate through the Web and Mobile Apps. You or
-anyone else will not have access to the location visit record data.
+You will always have access to your personal information, the phone number and the email address. You may verify the accuracy and completeness of your contact information and may amend the information yourself, if appropriate through the Web and Mobile Apps. You or anyone else will not have access to the location visit record data.
 
-#10. Additional Information
+10. Additional Information
 
-It is your responsibility to manage the cached personal data in your browser history or on your
-smartphone.
+It is your responsibility to manage the cached personal data in your browser history or on your smartphone.
 
-#Cookies
+Cookies
 
-A cookie is a small computer file or piece of information that may be stored in your computer's
-hard drive when you visit our Websites. We may use cookies to improve our website’s
-functionality and, in some cases, to provide visitors with a customized online experience.
+A cookie is a small computer file or piece of information that may be stored in your computer's hard drive when you visit our Websites. We may use cookies to improve our website’s functionality and, in some cases, to provide visitors with a customized online experience.
 
-You may change your Internet browser settings to prevent your computer from accepting
-cookies or to notify you when you receive a cookie so that you may decline its acceptance.
-Please note, however, if you disable cookies, you may not experience optimal performance of
-our website.
+You may change your Internet browser settings to prevent your computer from accepting cookies or to notify you when you receive a cookie so that you may decline its acceptance. Please note, however, if you disable cookies, you may not experience optimal performance of our website.
 
-#Other Websites
-The application may contain links to other third-party sites that are not governed by this privacy
-policy. Although we endeavor to only link to those sites with high privacy standards, our privacy
-policy will no longer apply once you leave our Website or our App. Additionally, we are not
-responsible for the privacy practices employed by third-party websites. Therefore, we suggest
-that you examine the privacy statements of those sites to learn how your information may be
-collected, used, shared, and disclosed.
+Other Websites
 
-#11. Handling Complaints and Suggestions
+The application may contain links to other third-party sites that are not governed by this privacy policy. Although we endeavor to only link to those sites with high privacy standards, our privacy policy will no longer apply once you leave our Website or our App. Additionally, we are not responsible for the privacy practices employed by third-party websites. Therefore, we suggest that you examine the privacy statements of those sites to learn how your information may be collected, used, shared, and disclosed.
+
+11. Handling Complaints and Suggestions
 
 You may direct any questions with respect to our privacy policy or our practices by
 
